fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 
 
+body
+  {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
 }
 .filter{
     margin-left: 0px;
